se actualiza el proyecto con nuevas clases

--- a/src/main/resources/fxml/Login.fxml
+++ b/src/main/resources/fxml/Login.fxml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml"
-            fx:controller="co.edu.uniquindio.logistica.controller.LoginController"
+            fx:controller="co.edu.uniquindio.logistica.ui.LoginController"
             prefWidth="400" prefHeight="300">
-
     <children>
-        <VBox alignment="CENTER" spacing="10" prefWidth="400" prefHeight="300">
+        <VBox alignment="CENTER" spacing="10" layoutX="50" layoutY="50" prefWidth="300" prefHeight="200">
             <Label text="Iniciar Sesión" style="-fx-font-size: 18px;"/>
-
             <TextField fx:id="emailField" promptText="Correo electrónico"/>
-            <PasswordField fx:id="telefonoField" promptText="Teléfono"/>
-
+            <PasswordField fx:id="passwordField" promptText="Contraseña"/>
             <Button text="Entrar" onAction="#handleLogin"/>
-            <Label fx:id="mensajeLabel" textFill="red"/>
+            <Label fx:id="mensajeLabel" />
         </VBox>
     </children>
 </AnchorPane>
+
 
 
