--- a/src/main/resources/fxml/User.fxml
+++ b/src/main/resources/fxml/User.fxml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane xmlns:fx="http://javafx.com/fxml"
-            fx:controller="co.edu.uniquindio.logistica.controller.UserController"
-            prefWidth="800" prefHeight="600">
+<VBox alignment="CENTER" prefHeight="300" prefWidth="400" spacing="20" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17.0.12" fx:controller="co.edu.uniquindio.logistica.ui.UserController">
+    <padding>
+        <Insets bottom="20" left="20" right="20" top="20" />
+    </padding>
 
-    <top>
-        <Label text="Panel de Usuario - Plataforma de Logística"
-               style="-fx-font-size: 18px; -fx-padding: 10;" />
-    </top>
+    <Label style="-fx-font-size: 18px;" text="Panel de Usuario - Plataforma de Logística" />
 
-    <center>
-        <VBox spacing="10" alignment="CENTER">
-            <Button text="Crear Envío" onAction="#abrirCrearEnvio"/>
-            <Button text="Ver Historial de Envíos" onAction="#verHistorial"/>
-            <Button text="Cerrar Sesión" onAction="#cerrarSesion"/>
-        </VBox>
-    </center>
-</BorderPane>
+    <Button onAction="#handleCrearEnvio" text="Crear Envío" />
+    <Button onAction="#handleVerHistorial" text="Ver Historial de Envíos" />
+    <Button text="Volver al Login" onAction="#handleVolverLogin"/>
 
+
+
+</VBox>
