--- a/src/main/resources/fxml/crear_envio.fxml
+++ b/src/main/resources/fxml/crear_envio.fxml
@@ -4,20 +4,26 @@
 <?import javafx.scene.layout.*?>
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml"
-            fx:controller="co.edu.uniquindio.logistica.controller.CrearEnvioController"
+            fx:controller="co.edu.uniquindio.logistica.ui.CrearEnvioController"
             prefWidth="400" prefHeight="300">
 
     <children>
-        <VBox alignment="CENTER" spacing="10" prefWidth="400" prefHeight="300">
+        <VBox spacing="10" alignment="CENTER"
+              layoutX="50" layoutY="30"
+              prefWidth="300" prefHeight="240">
+
             <Label text="Crear Envío" style="-fx-font-size: 18px;"/>
 
-            <TextField fx:id="origenField" promptText="Dirección Origen"/>
-            <TextField fx:id="destinoField" promptText="Dirección Destino"/>
-            <TextField fx:id="pesoField" promptText="Peso en Kg"/>
+            <TextField fx:id="origenField" promptText="Dirección de Origen"/>
+            <TextField fx:id="destinoField" promptText="Dirección de Destino"/>
+            <TextField fx:id="pesoField" promptText="Peso en kg"/>
 
-            <Button text="Crear Envío" onAction="#handleCrearEnvio"/>
-            <Label fx:id="mensajeLabel"/>
+            <HBox spacing="10" alignment="CENTER">
+                <Button fx:id="crearBtn" text="Crear" onAction="#handleCrear"/>
+                <Button fx:id="cancelarBtn" text="Cancelar" onAction="#handleCancelar"/>
+            </HBox>
+
+            <Label fx:id="mensajeLabel" textFill="red"/>
         </VBox>
     </children>
 </AnchorPane>
-
